--- a/index.html
+++ b/index.html
@@ -37,8 +37,40 @@
         -ms-overflow-style: none;
         scrollbar-width: none;
       }
+
+      /* Print Specific Styles for PDF Export */
+      @media print {
+        @page {
+          size: A4;
+          margin: 1.5cm;
+        }
+        body {
+          background-color: white !important;
+          color: black !important;
+          print-color-adjust: exact;
+          -webkit-print-color-adjust: exact;
+        }
+        /* Ensure the root app container hides nicely */
+        #root > div {
+          display: none !important;
+        }
+        /* Allow the specific print container to show */
+        #print-container {
+          display: block !important;
+          position: relative !important;
+          width: 100% !important;
+          height: auto !important;
+          overflow: visible !important;
+          background: white !important;
+        }
+        /* Break pages nicely */
+        .page-break {
+          break-inside: avoid;
+          page-break-inside: avoid;
+        }
+      }
     </style>
-  <script type="importmap">
+<script type="importmap">
 {
   "imports": {
     "react": "https://aistudiocdn.com/react@^19.2.0",
@@ -46,10 +78,10 @@
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
+    "@capacitor/camera": "https://aistudiocdn.com/@capacitor/camera@^7.0.2",
     "@capacitor/cli": "https://aistudiocdn.com/@capacitor/cli@^7.4.4",
     "vite": "https://aistudiocdn.com/vite@^7.2.4",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
-    "@capacitor/camera": "https://aistudiocdn.com/@capacitor/camera@^7.0.2"
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
   }
 }
 </script>
