--- a/index.html
+++ b/index.html
@@ -42,31 +42,61 @@
       @media print {
         @page {
           size: A4;
-          margin: 1.5cm;
+          margin: 1cm;
         }
-        body {
+        
+        /* Reset basic styles for print */
+        html, body {
           background-color: white !important;
           color: black !important;
-          print-color-adjust: exact;
-          -webkit-print-color-adjust: exact;
-        }
-        /* Ensure the root app container hides nicely */
-        #root > div {
-          display: none !important;
-        }
-        /* Allow the specific print container to show */
-        #print-container {
-          display: block !important;
-          position: relative !important;
-          width: 100% !important;
           height: auto !important;
           overflow: visible !important;
+          margin: 0 !important;
+          padding: 0 !important;
+        }
+
+        /* 
+           Crucial: Use visibility hidden for everything, 
+           then visible for print container. 
+           Avoids 'display: none' on parents which kills children.
+        */
+        body * {
+          visibility: hidden;
+        }
+
+        /* Make root and main layout wrappers visible in structure but hidden content */
+        #root, main {
+            visibility: visible;
+            display: block !important;
+            height: auto !important;
+            overflow: visible !important;
+            position: static !important;
+        }
+
+        /* Explicitly show the print container and its children */
+        #print-container, #print-container * {
+          visibility: visible;
+          display: block; /* Ensure it's not hidden by Tailwind classes */
+        }
+
+        /* Position the print container to cover the page */
+        #print-container {
+          position: absolute;
+          left: 0;
+          top: 0;
+          width: 100%;
+          margin: 0;
+          padding: 0;
+          z-index: 9999;
           background: white !important;
         }
-        /* Break pages nicely */
+
+        /* Page break utilities */
         .page-break {
           break-inside: avoid;
           page-break-inside: avoid;
+          margin-bottom: 2rem;
+          display: block;
         }
       }
     </style>
@@ -77,7 +107,7 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
+    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
     "@capacitor/camera": "https://aistudiocdn.com/@capacitor/camera@^7.0.2",
     "@capacitor/cli": "https://aistudiocdn.com/@capacitor/cli@^7.4.4",
     "vite": "https://aistudiocdn.com/vite@^7.2.4",
@@ -85,9 +115,11 @@
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
   <body>
     <div id="root"></div>
     <script type="module" src="./index.tsx"></script>
-  </body>
+  <script type="module" src="/index.tsx"></script>
+</body>
 </html>
