--- a/index.html
+++ b/index.html
@@ -136,13 +136,17 @@
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
     "@capacitor/filesystem": "https://aistudiocdn.com/@capacitor/filesystem@^7.1.5",
     "@capacitor/cli": "https://aistudiocdn.com/@capacitor/cli@^7.4.4",
-    "@capacitor/camera": "https://aistudiocdn.com/@capacitor/camera@^7.0.2"
+    "@capacitor/camera": "https://aistudiocdn.com/@capacitor/camera@^7.0.2",
+    "@capacitor/local-notifications": "https://aistudiocdn.com/@capacitor/local-notifications@^6.0.0",
+    "@capacitor/core": "https://aistudiocdn.com/@capacitor/core@^7.4.4"
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
   <body>
     <div id="root"></div>
     <script type="module" src="./index.tsx"></script>
-  </body>
+  <script type="module" src="/index.tsx"></script>
+</body>
 </html>
